<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.android.artsytartsy.ui.RecipeDetailsFragment"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimaryLight">

    <android.support.v7.widget.CardView
        android:id="@+id/ingredients_card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ingredients_iv"
            android:scaleType="fitXY"
            android:src="@drawable/ingredients"/>

    </android.support.v7.widget.CardView>

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="@dimen/recipe_title"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/steps_title"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/steps_recyclerview"/>

</LinearLayout>
