<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.android.artsytartsy.ui.MainActivity"
    >

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipes_recyclerview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_message"
        android:textSize="@dimen/error_text_size"
        android:padding="@dimen/error_padding"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:text="@string/error_message"/>

    <ProgressBar
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:id="@+id/pb_loading_indicator"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</FrameLayout>
