...
                android:layout_height="@dimen/exoplayer_size"
                android:id="@+id/playerView"
                android:layout_gravity="center"/>
            <ProgressBar
                android:layout_width="@dimen/progressbar_size"
                android:layout_height="@dimen/progressbar_size"
                android:id="@+id/exo_pb"
                android:visibility="invisible"
                android:layout_gravity="center"/>
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
...
